--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   app_settings: ^6.1.1
   flutter_local_notifications: ^17.2.2
   shimmer: ^3.0.0
+  simple_month_year_picker: ^1.1.0
 #  googleapis_auth: ^2.0.0
 
 
