--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,11 +58,11 @@ dependencies:
 
 
 
-flutter_icons:
+flutter_launcher_icons:
   android: true
-  image_path: "assets/images/logo1-min.png"
-  adaptive_icon_background: "#FFFFFF"
-  adaptive_icon_foreground: "assets/images/logo1-min.png"
+  ios: true
+  image_path: "assets/icon/icon.png" # Path to your 1024x1024 icon
+  # Optional adaptive icons config
 
 dev_dependencies:
   flutter_test:
@@ -89,6 +89,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/icon/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
