--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,8 +61,8 @@ dependencies:
 flutter_launcher_icons:
   android: true
   ios: true
-  image_path: "assets/icon/icon.png" # Path to your 1024x1024 icon
-  # Optional adaptive icons config
+  image_path: "assets/icon/icon.png"
+  remove_alpha_ios: true
 
 dev_dependencies:
   flutter_test:
