--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,9 @@ dependencies:
   flutter_local_notifications: ^17.2.2
   shimmer: ^3.0.0
   simple_month_year_picker: ^1.1.0
+  pdf: ^3.10.0
+  printing: ^5.9.1
+  path_provider: ^2.1.1
 #  googleapis_auth: ^2.0.0
 
 
