--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,9 @@ dependencies:
   printing: ^5.9.1
   path_provider: ^2.1.5
   permission_handler: ^12.0.0+1
+  image_picker: ^0.8.7
+  http_parser: ^4.0.2
+  file_picker: ^10.2.0
 
 #  googleapis_auth: ^2.0.0
 
