--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   image_picker: ^0.8.7
   http_parser: ^4.0.2
   file_picker: ^10.2.0
+  cloud_firestore: ^5.6.9
 
 #  googleapis_auth: ^2.0.0
 
