--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,8 @@ dependencies:
   http_parser: ^4.0.2
   file_picker: ^10.2.0
   cloud_firestore: ^5.6.9
+  firebase_auth: ^5.6.0
+  google_sign_in: ^7.0.0
 
 
 #  googleapis_auth: ^2.0.0
