--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,8 @@ dependencies:
   cloud_firestore: ^5.6.9
   firebase_auth: ^5.6.0
   google_sign_in: ^7.0.0
+  signature: ^5.4.0
+  flutter_fingerprint_reconization: ^0.0.1
 
 
 #  googleapis_auth: ^2.0.0
