--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,7 +52,6 @@ dependencies:
   flutter_local_notifications: ^17.2.2
   simple_month_year_picker: ^1.1.0
   pdf: ^3.10.0
-  printing: ^5.9.1
   path_provider: ^2.1.5
   permission_handler: ^12.0.0+1
   image_picker: ^0.8.7
@@ -62,6 +61,9 @@ dependencies:
   firebase_auth: ^5.6.0
   cached_network_image: ^3.4.1
   shimmer: ^3.0.0
+  qr_flutter: ^4.1.0
+  barcode_widget: ^2.0.2
+  printing: ^5.14.2
 
 
 #  googleapis_auth: ^2.0.0
