--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,8 @@ dependencies:
   qr_flutter: ^4.1.0
   barcode_widget: ^2.0.2
   printing: ^5.14.2
+  carousel_slider: ^5.1.1
+  focusable_control_builder: ^1.1.0
 
 
 #  googleapis_auth: ^2.0.0
