--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,9 @@ dependencies:
   carousel_slider: ^5.1.1
   focusable_control_builder: ^1.1.0
 
+  flutter_typeahead: ^5.2.0
+
+
 
 #  googleapis_auth: ^2.0.0
 
