--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,8 +46,8 @@ dependencies:
   fl_chart: ^0.70.2
   pie_chart: ^5.4.0
   flutter_launcher_icons: ^0.13.1
-  firebase_core: ^3.13.0
-  firebase_messaging: ^15.2.5
+  firebase_core: ^4.0.0
+  firebase_messaging: ^16.0.0
   app_settings: ^6.1.1
   flutter_local_notifications: ^17.2.2
   simple_month_year_picker: ^1.1.0
@@ -57,8 +57,8 @@ dependencies:
   image_picker: ^0.8.7
   http_parser: ^4.0.2
   file_picker: ^10.2.0
-  cloud_firestore: ^5.6.9
-  firebase_auth: ^5.6.0
+  cloud_firestore: ^6.0.0
+  firebase_auth: ^6.0.1
   cached_network_image: ^3.4.1
   shimmer: ^3.0.0
   qr_flutter: ^4.1.0
@@ -66,6 +66,10 @@ dependencies:
   printing: ^5.14.2
   carousel_slider: ^5.1.1
   focusable_control_builder: ^1.1.0
+  firebase_storage: ^13.0.0
+  mime: ^2.0.0
+
+
 
 
 
