--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -98,6 +98,8 @@ dev_dependencies:
   mime: ^2.0.0
   flutter_typeahead: ^5.2.0
   dropdown_button2: ^2.3.9
+  open_file: ^3.5.10
+
 
 
 # For information on the generic Dart part of this file, see the
