--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -100,7 +100,7 @@ dev_dependencies:
   dropdown_button2: ^2.3.9
   open_file: ^3.5.10
   crop_your_image: ^2.0.0
-  google_mlkit_text_recognition: ^0.15.0  # for extracting text (OCR)
+  tesseract_ocr: ^0.5.0
 
 
 
@@ -120,6 +120,8 @@ flutter:
   assets:
     - assets/images/
     - assets/icon/
+    - assets/tessdata/
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
