--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -100,8 +100,9 @@ dev_dependencies:
   dropdown_button2: ^2.3.9
   open_file: ^3.5.10
   crop_your_image: ^2.0.0
-  tesseract_ocr: ^0.5.0
+#  tesseract_ocr: ^0.5.0
   google_mlkit_text_recognition: ^0.15.0
+
 
 
 
