--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -104,6 +104,7 @@ dev_dependencies:
   google_mlkit_text_recognition: ^0.15.0
   signature: ^6.3.0
   photo_manager: ^3.7.1
+  webview_flutter_plus: ^0.4.19
 
 
 
