--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -98,6 +98,7 @@ dev_dependencies:
   mobile_scanner: ^7.1.3
   image_picker: ^0.8.7
   permission_handler: ^12.0.0+1
+  connectivity_plus: ^7.0.0
 
 
 
