--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -99,6 +99,7 @@ dev_dependencies:
   image_picker: ^0.8.7
   permission_handler: ^12.0.0+1
   connectivity_plus: ^7.0.0
+  searchfield: ^1.4.0
 
 
 
